--- a/September10.html
+++ b/September10.html
@@ -8,7 +8,7 @@
 <body>
     <h2>September 10, 2024</h2>
 
-    <img scr="https://web.archive.org/web/20090829012411/http://geocities.com/odriscolll/spacedog.gif"/>
+    <img src="https://web.archive.org/web/20090829012411/http://geocities.com/odriscolll/spacedog.gif"/>
 
     <a href="https://web.archive.org/web/20090829030054/http://geocities.com/odriscolll/archive69.html"<Gif source</a>
 </body>
