--- a/entry2.html
+++ b/entry2.html
@@ -38,6 +38,9 @@
     <!-- Adding an image -->
     <img src="https://media.timeout.com/images/106025055/1536/864/image.webp">
 
+     <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.timeout.com%2Fnewyork%2Fnews%2Fthe-beloved-love-sculpture-is-returning-to-nyc-after-4-years-071323&psig=AOvVaw00vquz87FdwBoJIIS5k3uq&ust=1727143255502000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKCvs5T814gDFQAAAAAdAAAAABAE"/>
+         
+
     <!-- Applying PT Sans Narrow Bold to paragraph -->
     <p class="pt-sans-narrow-bold"><a href="https://oliviahylam.github.io/c1i/">Back to home page</a></p>
 </body>
