--- a/entry2.html
+++ b/entry2.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <!-- Applying PT Sans Narrow Regular to header -->
-    <h1 class="pt-sans-narrow-regular">Welcome to Entry 2</h1>
+    <h1 class="pt-sans-narrow-regular">"Love" Sculpture by Robert Indiana</h1>
     <p class="pt-sans-narrow-regular">This is the second entry for the homework assignment.</p>
 
     <!-- Adding an image -->
