--- a/entry3.html
+++ b/entry3.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <!-- Applying PT Sans Narrow Regular to header -->
-    <h1 class="pt-sans-narrow-regular">The Vessel</h1>
+    <h1 class="pt-sans-narrow-regular">The Vessel by Thomas Heatherwic</h1>
     <p class="pt-sans-narrow-regular">This is the third entry for the homework assignment.</p>
 
     <!-- Adding an image -->
