--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <Title>NYC Iconic Artworks</Title>
     <style>
       body {
-        background-color: papayawhip;
+        background-color: lavenderblush;
         font-family: Arial, sans-serif;
       }
       h1 {
@@ -37,7 +37,7 @@
       <a href="entry4.html">Financial District</a>
       <a href="entry2.html">Midtown</a>
       <a href="entry3.html">Hudson Yards</a>
+      <a href="entry5.html">Central Park</a>
     </div>
   </body>
 </html>
-
