--- a/entry2.html
+++ b/entry2.html
@@ -1,4 +1,6 @@
+
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,7 +27,7 @@
         }
 
         body {
-            background-color: papayawhip;
+            background-color: rosybrown;
             font-family: "PT Sans Narrow", sans-serif; /* Default to regular weight */
         }
     </style>
@@ -33,14 +35,14 @@
 <body>
     <!-- Applying PT Sans Narrow Regular to header -->
     <h1 class="pt-sans-narrow-regular">"Love" Sculpture by Robert Indiana</h1>
-    <p class="pt-sans-narrow-regular">This is the second entry for the homework assignment.</p>
 
     <!-- Adding an image -->
-    <img src="https://media.timeout.com/images/106025055/1536/864/image.webp">
-
+    <img src="https://media.timeout.com/images/106025055/1536/864/image.webp" width = 500>
+     <p class="pt-sans-narrow-regular">The LOVE Sculpture by Robert Indiana, installed in 1970 on Sixth Avenue and 55th Street in New York City, is an iconic piece of public art symbolizing unity, peace, and affection. Originally designed as a Christmas card for MoMA in 1965, the bold red and blue letters, with a tilted "O," reflect Indiana's exploration of language and universal themes. Emerging during the counterculture movement, it resonated with messages of love and optimism amidst social and political unrest. A popular photo spot for tourists and locals, the sculpture became a global symbol, with replicas in cities worldwide. Though temporarily removed in 2019 for maintenance and crowd safety concerns, its cultural legacy endures, demonstrating the power of art to foster joy and connection across generations.</p>
+  
      <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.timeout.com%2Fnewyork%2Fnews%2Fthe-beloved-love-sculpture-is-returning-to-nyc-after-4-years-071323&psig=AOvVaw00vquz87FdwBoJIIS5k3uq&ust=1727143255502000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKCvs5T814gDFQAAAAAdAAAAABAE"/>
          
-
+    
     <!-- Applying PT Sans Narrow Bold to paragraph -->
   <p class="pt-sans-narrow-bold"><a href="https://oliviahylam.github.io/c1i/home.html">Back to home page</a></p>
 </body>
