--- a/home.html
+++ b/home.html
@@ -38,6 +38,7 @@
       <a href="entry2.html">Midtown</a>
       <a href="entry3.html">Hudson Yards</a>
       <a href="entry5.html">Central Park</a>
+      <a href="entry6.html">Wall Street</a>
     </div>
   </body>
 </html>
