--- a/entry7.html
+++ b/entry7.html
@@ -35,7 +35,7 @@
 
     <!-- Adding an image -->
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/62/The_sphere.jpg" width = 500>
-     <p class="pt-sans-narrow-regular">The Charging Bull by Arturo Di Modica, installed in 1989 in Bowling Green, is a powerful symbol of financial optimism and resilience. Created as a guerilla artwork, the 7,100-pound bronze sculpture was placed without permission near the New York Stock Exchange following the 1987 market crash, embodying the strength and determination of the American economy. Depicting a bull mid-charge, it has become a popular attraction and photo spot, representing prosperity and ambition. Though initially removed by authorities, public demand secured its permanent installation in the Financial District. Today, the Charging Bull remains an iconic symbol of Wall Street and New York's enduring economic spirit.</p>
+     <p class="pt-sans-narrow-regular">The Sphere by Fritz Koenig, created in 1971, originally stood at the center of the World Trade Center plaza as a symbol of global peace through trade. Remarkably, the 25-foot-tall bronze sculpture survived the 9/11 attacks, becoming an emblem of resilience amidst the tragedy. After being recovered from the rubble, the damaged Sphere was relocated to Battery Park in 2002 as a memorial to honor the victims and the spirit of recovery. Its battered surface serves as a poignant reminder of the events of that day, transforming the artwork from a symbol of commerce to one of hope, endurance, and remembrance.</p>
   
      <a href="https://en.wikipedia.org/wiki/The_Sphere"/>
          
