--- a/home.html
+++ b/home.html
@@ -39,6 +39,8 @@
       <a href="entry3.html">Hudson Yards</a>
       <a href="entry5.html">Central Park</a>
       <a href="entry6.html">Wall Street</a>
+     <a href="entry7.html">World Trade Center</a>
+       <a href="entry9.html">Liberty Island</a>
     </div>
   </body>
 </html>
